# sdl3-template

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
